--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -4,6 +4,89 @@ body {
   color: $color;
 }
 
-h2{
-	color: red;
+div.container {
+  margin-left: 0px;
+  margin-right: 0px;
+  width: 100%;
+}
+
+.mainHeader {
+  background: linear-gradient(rgba(0, 0, 0, 0.79), rgba(0, 0, 0, 0.65));
+  color: #FFFFFF;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  padding-left: 10px;
+  margin-bottom: 2%;
+}
+
+h1 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+h2 {
+  color: red;
+}
+
+ul#visitListElementDetails {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+li#customer {
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.65);
+  border-bottom: thin dotted rgba(0, 0, 0, 0.26);
+}
+
+li#salesman {
+  font-size: 13px;
+  border-bottom: thin dotted rgba(0, 0, 0, 0.26);
+  margin-bottom: 4px;
+}
+
+li.minorDetails {
+  font-size: 10px;
+}
+
+ul#visitListElementDetails {
+
+}
+
+.list-group-item {
+  border-radius: 0 9px 0 9px;
+  padding: 15px;
+  margin-bottom: 15px;
+  box-shadow: 0px 0px 7px rgba(0, 0, 0, .075);
+}
+
+.list-group {
+  border-radius: none;
+  box-shadow: none;
+}
+
+.list-group-item:first-child {
+  border-radius: 0 9px 0 9px;
+}
+
+.list-group-item:last-child {
+  border-radius: 0 9px 0 9px;
+}
+
+.panel {
+  border: none;
+  box-shadow: none;
+}
+
+.panel-body {
+  padding-top: 0px;
+}
+
+.sectionTitle {
+  color: rgba(0, 0, 0, 0.65);
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
